--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
-page-home {
-
+.ios,
+.md {
+    home-page {
+        .scroll {
+            height: 100%
+        }
+        #map {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
